--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,46 @@
+/* html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+ html, body, .root {
+
+} */
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+#root {
+	height: 100%;
+}
+
+
 .App {
-  text-align: center;
+
+    display: flex;
+	text-align: center;
+	height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+
+
+.sidebar {
+
+    border: 1px solid black;
+    width: 20%;
+	max-width: 250px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
 
-.App-title {
-  font-size: 1.5em;
-}
+.map {
+flex: 1;
 
-.App-intro {
-  font-size: large;
-}
+    /* width: 70%; */
+    /* height: 100vh; */
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
