--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,3 @@
-/* html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
- html, body, .root {
-
-} */
-
 * {
 	margin: 0;
 	padding: 0;
@@ -24,7 +13,9 @@
 
     display: flex;
 	text-align: center;
-	height: 100%;
+    height: 100vh;
+
+
 }
 
 
@@ -33,12 +24,14 @@
 
     border: 1px solid black;
     width: 20%;
-	max-width: 250px;
+
+
 }
 
 
 .map {
-     max-width: 70%;
 
+     width: 80%;
+     position: relative;
 
 }
