--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,11 @@
 	height: 100%;
 }
 
-
 .App {
 
-    display: flex;
+	display: flex;
 	text-align: center;
-    height: 100vh;
+	height: 100vh;
 
 
 }
@@ -22,8 +21,8 @@
 
 .sidebar {
 
-    border: 1px solid black;
-    width: 20%;
+	border: 1px solid black;
+	width: 20%;
 
 
 }
@@ -31,7 +30,31 @@
 
 .map {
 
-     width: 80%;
-     position: relative;
+	 width: 80%;
+	 position: relative;
+
+}
+
+
+
+@media screen and (max-width: 700px) {
+
+	.App {
+		display: flex;
+		flex-direction: column;
+
+	}
+	.sidebar {
+		height: 15%;
+		width: 100%
+	}
+	.map {
+		height: 80%;
+		width: 100%;
+		position:relative;
+	}
+
+
+
 
 }
