--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,7 @@
 
 	.menu-list {
 		display: block;
-		background-color: #424242;
+		background-color: #AA3939;
 		list-style: none;
 		padding:0;
 		margin:0;
@@ -148,7 +148,7 @@
 
 	.menu-list.hidden {
 		/* display: none; */
-		background-color: #424242;
+		background-color: #AA3939;
 		list-style: none;
 		padding:0;
 		margin:0;
@@ -158,12 +158,30 @@
 
 
 	.menu-items {
+
 		margin-top:10px;
+
 	}
+
 	.menu-items:nth-child(1) {
 		margin-top: 10px;
 	}
 	.menu-items:last-child {
 		margin-bottom: 20px;
+	}
+
+
+	.menu-items a:link {
+
+		color: #ffaaaa;
+		text-decoration: none;
+	}
+
+	.menu-items a:visited {
+		color: #ffaaaa;
+	}
+
+	.menu-items a:hover {
+		color: #550000;
 	}
 }
