--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,94 @@
 
 .sidebar {
 
-	/* border: 1px solid black; */
+
 	width: 20%;
+	background-color: #AA3939;
+
+}
+
+
+.sidebar-header {
+	display: flex;
+	height: 75px;
+	background: #2e3d49;
+	position: relative;
+	z-index: 11;
+}
+
+
+.title {
+	margin-left: 15px;
+	margin-right: 15px;
+	text-align: center;
+	padding-top: 10px;
+	color: white;
+}
+
+
+nav {
+
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	color: white;
+	z-index: 10;
+	position: relative;
 
 
 }
 
+.search-input {
+	border: none;
+	margin-top: 20px;
+	margin-bottom: 10px;
+	border-radius: 4px;
+	padding: 0.5em;
+	text-align: center;
+	color: #801515;
+	background-color: #ffaaaa;
+	outline-color: #801515;
+
+}
+
+.menu-list {
+	display: block;
+	background-color: #AA3939;
+	list-style: none;
+	padding:0;
+	margin:0;
+	transition:all 0.5s ease-in-out;
+	transform: translateY(0px);
+}
+
+
+.menu-items {
+
+	margin-top:10px;
+
+}
+
+.menu-items:nth-child(1) {
+	margin-top: 10px;
+}
+.menu-items:last-child {
+	margin-bottom: 20px;
+}
+
+
+.menu-items a:link {
+
+	color: #ffaaaa;
+	text-decoration: none;
+}
+
+.menu-items a:visited {
+	color: #ffaaaa;
+}
+
+.menu-items a:hover {
+	color: #550000;
+}
 
 .map {
 
