--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
 	background-color: #AA3939;
 
 
+
 }
 
 .map {
@@ -74,7 +75,6 @@ nav {
 	position: relative;
 
 
-
 }
 
 .search-input {
@@ -104,7 +104,7 @@ nav {
 .menu-items {
 
 	margin-top:10px;
-
+	padding:0 20px;
 }
 
 .menu-items:nth-child(1) {
@@ -246,18 +246,17 @@ nav {
 		list-style: none;
 		padding:0;
 		margin:0;
-		/* transition:all 0.5s ease-in-out;
-		transform: translateY(0px); */
+
 	}
 
 	 .menu-list.hidden {
-		/* display: none; */
+
 
 		background-color: #AA3939;
 		list-style: none;
 		padding:0;
 		margin:0;
-		/* transform: translateY(-1000px); */
+
 
 	}
 
